--- a/admin/index.html
+++ b/admin/index.html
@@ -462,10 +462,20 @@
             return value.toString().replace(/[&<>"']/g, (match) => HTML_ESCAPES[match] || match);
         }
 
+        function formatDateOnly(date) {
+            if (!(date instanceof Date) || Number.isNaN(date.getTime())) {
+                return '';
+            }
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
         function setOverviewDateToToday() {
             const input = document.getElementById('overviewDate');
             if (!input || input.value) return;
-            input.value = new Date().toISOString().split('T')[0];
+            input.value = formatDateOnly(new Date());
         }
 
         function formatOverviewDateTime(isoString) {
