--- a/frontend/class-schedule.html
+++ b/frontend/class-schedule.html
@@ -258,7 +258,13 @@
         }
 
         function formatDate(date) {
-            return date.toISOString().split('T')[0];
+            if (!(date instanceof Date) || Number.isNaN(date.getTime())) {
+                return '';
+            }
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
         }
 
         function formatDisplayDate(date) {
