Fix class schedule init to load weekly classes

--- a/frontend/class-schedule.html
+++ b/frontend/class-schedule.html
@@ -617,7 +617,7 @@
             updateWeekLabel();
             renderDayButtons();
             await loadSettings();
-            loadClasses(state.selectedDate);
+            await loadWeekClasses();
         }
 
         init();
