Strip lingering footer notes via runtime cleanup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,12 +70,6 @@
             font-weight: 600;
             color: var(--brand-primary);
         }
-        footer {
-            text-align: center;
-            padding: 40px 24px;
-            color: #64748b;
-            font-size: 0.9rem;
-        }
         .badge {
             position: absolute;
             top: 24px;
@@ -110,6 +104,17 @@
             </a>
         </div>
     </main>
-    <footer>Powered by the Studio Booking backend API · API_BASE_URL 會自動偵測部署環境</footer>
+    <script>
+        // Safety net: remove any lingering footer notes that may be present in cached deployments
+        document.querySelectorAll('footer').forEach((footer) => {
+            const text = footer.textContent.trim();
+            const shouldRemove =
+                text.includes('Powered by the Studio Booking backend API') ||
+                text.includes('課堂資料與方案皆由後台設定');
+            if (shouldRemove) {
+                footer.remove();
+            }
+        });
+    </script>
 </body>
 </html>
