--- a/frontend/classes.html
+++ b/frontend/classes.html
@@ -56,7 +56,6 @@
             background: rgba(255,255,255,0.8);
         }
         nav a:hover { border-color: var(--brand-secondary); }
-        footer { text-align: center; padding: 40px 24px; color: #64748b; font-size: 0.9rem; }
     </style>
 </head>
 <body>
@@ -87,6 +86,17 @@
             </a>
         </div>
     </main>
-    <footer>課堂資料與方案皆由後台設定 · 以 Render 上的 API_BASE_URL 取得即時內容</footer>
+    <script>
+        // Ensure any legacy footer note injected by cached assets is removed
+        document.querySelectorAll('footer').forEach((footer) => {
+            const text = footer.textContent.trim();
+            const shouldRemove =
+                text.includes('課堂資料與方案皆由後台設定') ||
+                text.includes('Powered by the Studio Booking backend API');
+            if (shouldRemove) {
+                footer.remove();
+            }
+        });
+    </script>
 </body>
 </html>
